# bazel-kotlin-android-starter

./: .gitignore  README.md  WORKSPACE
android/: BUILD.bazel
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/helloworld/: AndroidManifest.xml  MainActivity.kt
android/src/main/java/com/example/helloworld/res/layout/: activity_main.xml
android/src/main/java/com/example/helloworld/res/values/: colors.xml  strings.xml
android/src/main/java/com/example/starter/: AndroidManifest.xml  MainActivity.kt
android/src/main/java/com/example/starter/res/layout/: activity_main.xml
android/src/main/java/com/example/starter/res/values/: colors.xml  strings.xml  styles.xml
tools/: deploy
